--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -1,3 +1,14 @@
-<p>
-  information works!
+<p class="title">
+  Let's finish powering you up!
 </p>
+<form class="info-form">
+  <input type="text" class="input" placeholder="Last name">
+  <input type="text" class="input" placeholder="First name">
+  <input type="text" class="input" placeholder="E-mail">
+  <input type="text" class="input" placeholder="Phone">
+  <select name="" id="" class="select">
+    <option value="">Val 1</option>
+    <option value="">Val 2</option>
+  </select>
+  <button class="button">Continue</button>
+</form>
