--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -1,3 +1,42 @@
-<p>
-  plan works!
+<p class="title">
+  A plan to suit you
 </p>
+<div class="plan-list">
+  <div class="plan-item">
+    <p class="plan-item__img">
+      <svg class="svg-shape" xmlns="http://www.w3.org/2000/svg" width="115" height="115" viewBox="0 0 48 48" style="opacity: 1;position:absolute;" preserveAspectRatio="none">
+        <path d="M28 12l-7.5 10 5.7 7.6L23 32c-3.38-4.5-9-12-9-12L2 36h44L28 12z" fill="rgb(175,190,196)" stroke="rgb(170,170,170)" stroke-width="0" stroke-linecap="square" stroke-alignment="inner" vector-effect="non-scaling-stroke" stroke-miterlimit="100"></path>
+     </svg>  
+    </p>
+    <div class="plan-item__context">
+      <h3 class="h3">Beginner</h3>
+      <span class="plan-item__price">10$</span>
+    </div>
+  </div>
+
+  <div class="plan-item active">
+    <p class="plan-item__img">
+      <svg class="svg-shape" xmlns="http://www.w3.org/2000/svg" width="115" height="115" viewBox="0 0 48 48" style="opacity: 1;position:absolute;" preserveAspectRatio="none">
+        <path d="M28 12l-7.5 10 5.7 7.6L23 32c-3.38-4.5-9-12-9-12L2 36h44L28 12z" fill="rgb(175,190,196)" stroke="rgb(170,170,170)" stroke-width="0" stroke-linecap="square" stroke-alignment="inner" vector-effect="non-scaling-stroke" stroke-miterlimit="100"></path>
+      </svg>  
+    </p>
+    <div class="plan-item__context">
+      <h3 class="h3">Intermediate</h3>
+      <span class="plan-item__price">20$</span>
+    </div>
+  </div>
+
+  <div class="plan-item">
+    <p class="plan-item__img">
+      <svg class="svg-shape" xmlns="http://www.w3.org/2000/svg" width="115" height="115" viewBox="0 0 48 48" style="opacity: 1;position:absolute;" preserveAspectRatio="none">
+        <path d="M28 12l-7.5 10 5.7 7.6L23 32c-3.38-4.5-9-12-9-12L2 36h44L28 12z" fill="rgb(175,190,196)" stroke="rgb(170,170,170)" stroke-width="0" stroke-linecap="square" stroke-alignment="inner" vector-effect="non-scaling-stroke" stroke-miterlimit="100"></path>
+      </svg>  
+    </p>
+    <div class="plan-item__context">
+      <h3 class="h3">Upper Intermediate</h3>
+      <span class="plan-item__price">30$</span>
+    </div>
+  </div>
+
+</div>
+<button class="button">Continue</button>
