--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-family: 'Roboto', sans-serif;
+}
+.title {
+  font-size: 24px;
+  color: #7b8d93;
+  line-height: 27px;
+  margin-bottom: 33px;
+  font-weight: normal;
+}
+.h3 {
+  font-size: 22px;
+  line-height:24px;
+  font-weight:normal;
+}
+.button {
+  background: rgb(27, 176, 27);
+  width: 150px;
+  height: 45px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 45px;
+  -webkit-appearance: none;
+  border: none;
+  outline: none;
+  border-radius: 3px;
+  color: #fff;
+}
+.input {
+  width: 100%;
+  max-width: 405px;
+  height: 60px;
+  -webkit-appearance: none;
+  border: none;
+  outline: none;
+  background: rgb(243,243,243);
+  padding: 15px;
+  font-size: 14px;
+  color: #7b8d93;
+}
+.select {
+  width: 100%;
+  height: 60px;
+  -webkit-appearance: none;
+  border: none;
+  outline: none;
+  background: rgb(243,243,243);
+  padding: 15px;
+}
