--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -2,10 +2,22 @@
   Let's finish powering you up!
 </p>
 <form class="info-form">
-  <input type="text" class="input" placeholder="Last name">
-  <input type="text" class="input" placeholder="First name">
-  <input type="text" class="input" placeholder="E-mail">
-  <input type="text" class="input" placeholder="Phone">
+  <div class="input">
+    <input type="text">
+    <label>Last name</label>
+  </div>
+  <div class="input">
+    <input type="text">
+    <label>First name</label>
+  </div>
+  <div class="input">
+    <input type="text">
+    <label>E-mail</label>
+  </div>
+  <div class="input">
+    <input type="text">
+    <label>Phone</label>
+  </div>
   <select name="" id="" class="select">
     <option value="">Val 1</option>
     <option value="">Val 2</option>
