--- a/src/styles.less
+++ b/src/styles.less
@@ -35,14 +35,37 @@ html {
 .input {
   width: 100%;
   max-width: 405px;
-  height: 60px;
-  -webkit-appearance: none;
-  border: none;
-  outline: none;
   background: rgb(243,243,243);
-  padding: 15px;
   font-size: 14px;
   color: #7b8d93;
+  position: relative;
+  input {
+    width: 100%;
+    height: 60px;
+    -webkit-appearance: none;
+    border: none;
+    outline: none;
+    background: transparent;
+    position: relative;
+    z-index: 2;
+    padding: 15px;
+    &:focus ~ label {
+      opacity: 0;
+    }
+  }
+  label {
+    position: absolute;
+    z-index: 1;
+    height: 60px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    line-height: 60px;
+    padding-left: 15px;
+    &.hide {
+      opacity: 0;
+    }
+  }
 }
 .select {
   width: 100%;
