--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
     <li class="tabs-link">Billing</li>
   </ul>
   <div class="content">
-    <app-information></app-information>
+    <app-billing></app-billing>
   </div>
 </div>
