--- a/src/styles.less
+++ b/src/styles.less
@@ -14,6 +14,13 @@ html {
   margin-bottom: 33px;
   font-weight: normal;
 }
+.subtitle {
+  font-size: 19px;
+  color: #7b8d93;
+  line-height: 22px;
+  margin-bottom: 33px;
+  font-weight: normal;
+}
 .h3 {
   font-size: 22px;
   line-height:24px;
@@ -31,6 +38,9 @@ html {
   outline: none;
   border-radius: 3px;
   color: #fff;
+}
+.color-light {
+  background: rgb(153, 153, 153);
 }
 .input {
   width: 100%;
