--- a/src/styles.less
+++ b/src/styles.less
@@ -79,10 +79,25 @@ html {
 }
 .select {
   width: 100%;
+  max-width: 100%;
   height: 60px;
   -webkit-appearance: none;
   border: none;
   outline: none;
   background: rgb(243,243,243);
-  padding: 15px;
+  position: relative;
+  &-options {
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background: #fff;
+    display: none;
+    p {
+      padding: 15px;
+    }
+  }
+  input:focus ~ .select-options {
+    display: block;
+  } 
 }
