finish changes for plan component
routing, button stages and set selected plan

--- a/src/styles.less
+++ b/src/styles.less
@@ -38,6 +38,9 @@ html {
   outline: none;
   border-radius: 3px;
   color: #fff;
+  &:disabled {
+    background: rgb(153, 153, 153);
+  }
 }
 .color-light {
   background: rgb(153, 153, 153);
