--- a/src/app/plan/plan.component.html
+++ b/src/app/plan/plan.component.html
@@ -3,9 +3,12 @@
 </p>
 <div class="plan-list">
 
-  <div class="plan-item" *ngFor="let plan of planList">
-    <p class="plan-item__img">
-      <img [src]="plan.preview">
+  <div class="plan-item" *ngFor="let plan of planList" (click)="setPlan(plan)" [class.active]="selectPlan === plan">
+    <p class="plan-item__img" *ngIf="plan.preview">
+      <img [src]="'assets/img/' + plan.preview">
+    </p>
+    <p class="plan-item__img" *ngIf="!plan.preview">
+      <img src="assets/img/beginner.jpg">
     </p>
     <div class="plan-item__context">
       <h3 class="h3">{{plan.title}}</h3>
@@ -14,4 +17,4 @@
   </div>
 
 </div>
-<button class="button">Continue</button>
+<button class="button" [disabled]="!selectPlan" (click)="nextStep()">Continue</button>
