--- a/src/app/information/information.component.less
+++ b/src/app/information/information.component.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: flex-start;
 }
 .input {
   margin-bottom: 30px;
