--- a/src/styles.less
+++ b/src/styles.less
@@ -48,10 +48,10 @@ html {
 .input {
   width: 100%;
   max-width: 405px;
-  background: rgb(243,243,243);
   font-size: 14px;
   color: #7b8d93;
   position: relative;
+  background: rgb(243,243,243);
   input {
     width: 100%;
     height: 60px;
@@ -66,6 +66,12 @@ html {
       opacity: 0;
     }
   }
+  .error {
+    display: none;
+    padding: 15px;
+    color: red;
+    background: #e5e5e8;
+  }
   label {
     position: absolute;
     z-index: 1;
@@ -75,6 +81,7 @@ html {
     left: 0;
     line-height: 60px;
     padding-left: 15px;
+    background: rgb(243,243,243);
     &.hide {
       opacity: 0;
     }
@@ -87,20 +94,15 @@ html {
   -webkit-appearance: none;
   border: none;
   outline: none;
-  background: rgb(243,243,243);
+  background: transparent;
   position: relative;
-  &-options {
-    width: 100%;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    background: #fff;
-    display: none;
-    p {
-      padding: 15px;
-    }
+  z-index: 2;
+  &.ng-valid {
+    background: rgb(243,243,243);
+    padding: 15px;
   }
-  input:focus ~ .select-options {
-    display: block;
-  } 
+}
+.ng-invalid.ng-touched ~ .error {
+  display: block;
+  color: #7b8d93;
 }
