finish changes for billing component

--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -1,38 +1,44 @@
 <div class="title-info">
-  <div>
+
+  <div *ngIf="plan">
     <p class="title">
       Your plan:
     </p>
-    <span class="subtitle">Intermediate<br>20$</span>
+    <span class="subtitle">{{plan.title}}<br>{{plan.price + plan.currency}}</span>
   </div>
-  <div>
+
+  <div *ngIf="infoFields">
     <p class="title">
       Information:
     </p>
-    <span class="subtitle">Jhon Doe, jhondoe@mail.ru<br>+1 123 456-78-90</span>
+    <span class="subtitle">{{infoFields.lastname + ' ' + infoFields.firstname + ', ' + infoFields.email}}<br>+{{infoFields.phone}}</span>
   </div>
+
+  <p *ngIf="!plan" class="title">Please, select the <a routerLink="products/plan">plan</a></p>
+  <p *ngIf="!infoFields" class="title">Please fill out the <a routerLink="products/information">form</a></p>
+
 </div>
-<!-- <form class="info-form">
+<form class="info-form"  *ngIf="!readyForm"  [formGroup]="card_form" (ngSubmit)="showAnswer()" >
   <div class="input">
-    <input type="text">
+    <input type="text" formControlName="number"> 
     <label>Card number</label>
   </div>
   <div class="input">
-    <input type="text">
+    <input type="text" formControlName="month">
     <label>Month (MM)</label>
   </div>
   <div class="input">
-    <input type="text">
+    <input type="text" formControlName="cvc">
     <label>CVC / CVV</label>
   </div>
   <div class="input">
-    <input type="text">
+    <input type="text" formControlName="year">
     <label>Year (YYYY)</label>
   </div>
-  <button class="button">Buy</button>
-</form> -->
-<div class="answer-box">
-  <div class="error">
+  <button class="button" (click)="showAnswer()">Buy</button>
+</form>
+<div class="answer-box" *ngIf="readyForm">
+  <div class="error" *ngIf="!answerType">
     <i class="icon">
       <svg class="svg-shape" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 48 48" style="opacity: 1;position:absolute;" preserveAspectRatio="none">
         <path d="M38 12.83L35.17 10 24 21.17 12.83 10 10 12.83 21.17 24 10 35.17 12.83 38 24 26.83 35.17 38 38 35.17 26.83 24z" fill="rgb(148, 148, 148)" stroke="rgb(170,170,170)" stroke-width="0" stroke-linecap="square" stroke-alignment="inner" vector-effect="non-scaling-stroke" stroke-miterlimit="100"></path>
@@ -40,9 +46,13 @@
     </i>
     <p class="title">Error!</p>
   </div>
-  <!-- <div class="success">
-      <i></i>
-      <p>Success!</p>
-  </div> -->
+  <div class="success" *ngIf="answerType">
+      <i class="icon">
+        <svg class="svg-shape" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 48 48" style="opacity: 1;position:absolute;" preserveAspectRatio="none">
+          <path d="M38 12.83L35.17 10 24 21.17 12.83 10 10 12.83 21.17 24 10 35.17 12.83 38 24 26.83 35.17 38 38 35.17 26.83 24z" fill="rgb(148, 148, 148)" stroke="rgb(170,170,170)" stroke-width="0" stroke-linecap="square" stroke-alignment="inner" vector-effect="non-scaling-stroke" stroke-miterlimit="100"></path>
+        </svg>
+      </i>
+      <p class="title">Success!</p>
+  </div>
 </div>
-<button class="button color-light back-button">Back</button>
+<button class="button color-light back-button" *ngIf="readyForm" (click)="hideAnswer()">Back</button>
