--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,5 +1,6 @@
 .container {
-  width: 960px;
+  width: 100%;
+  max-width: 960px;
   padding: 25px 30px;
   border-top: 5px solid rgb(120,139,145);
   background: rgb(243,243,243);
