--- a/src/styles.less
+++ b/src/styles.less
@@ -106,3 +106,26 @@ html {
   display: block;
   color: #7b8d93;
 }
+
+@media (max-width: 935px) {
+  .info-form div {
+    max-width: 100%;
+  }
+  
+}
+@media (max-width: 780px){
+  .button {
+    width: 100%;
+  }
+}
+@media (max-width: 650px) {
+  .title-info {
+    flex-wrap: wrap;
+    div {
+      margin-bottom: 30px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
